# Breast

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/: wheels.yml
.github/workflows/: wheels.yml
cpp/: CMakeLists.txt  README.md  build.sh
cpp/bindings/: CMakeLists.txt  bind_collision.cpp  bind_engine.cpp
cpp/cmake/: common.cmake  write_init.cmake
cpp/modules/collision/: CMakeLists.txt
cpp/modules/collision/include/collision/: broadphase.hpp  narrow.hpp  world.hpp
cpp/modules/collision/src/: broadphase.cpp  narrow.cpp  world.cpp
cpp/modules/engine/: CMakeLists.txt
cpp/modules/engine/include/: solver.hpp  volume.hpp
cpp/modules/engine/include/engine/: sim_thread.hpp  solver.hpp  volume.hpp
cpp/modules/engine/src/: sim_thread.cpp  solver.cpp  volume.cpp
cpp/src/breast/: solver_cpp.py
src/breast/: __init__.py  __main__.py  _engine.pyi  hemisphere.py  models.py  renderer.py  sim.py  solver_cpp.py  solver_numpy.py  types.py
src/breast/engine/: __init__.py
src/breast/mesh/: hemisphere.py
src/breast/shaders/: basic.frag  basic.geom  basic.vert  mesh.frag  mesh.geom  mesh.vert  ui.frag  ui.vert
