[project]
name = "breast"
version = "0.1.0"
description = "Breast model physics"
authors = [
    {name = "Frank1o3",email = "jahdy1o3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numba",
    "moderngl",
    "pygame-ce (>=2.5.6,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sim = "breast.sim:main"
[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
